MERN-Stack/mongo.yml
apiVersion: v1
kind: Service 
metadata:
  name: MongoService
spec:
   selector:
      app: mongodb
   ports:
      - protocol: TCP
        port: 5432
        targetPort: 5432       

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: MongoDB
spec:
   serviceName: MongoService 
   replicas: 1
   selector:
    matchLabels:
      app: mongodb
   template:
    metadata:
      labels:
        app: mongodb
        selector: mongodb
    spec:
      containers:
        - name: mongodb-container
          image: mongo
          ports: 
            - containerPort: 27017
          volumeMounts:
            - name: pvc
              mountPath: /data/db
   volumeClaimTemplates:
      - metadata:
          name: pvc
        spec: 
          accessModes:
            - ReadWriteOnce
          resources:
            requests:
              storage: 1Gi
