MERN-Stack/react.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ReactClient
  labels:
    app: client
spec:
  replicas: 9
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: react-container
        image: gerrome/mern-stack-app_client:1
---
apiVersion: v1
kind: Service
metadata:
  name: ReactService
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
  - name: http
    port: 3000
