MERN-Stack/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1    
spec:
  defaultBackend:
    service:
      name: ReactService
      port:
        number: 3000
  rules:
  - host: victorsapp.com
    http:
     paths:
     - path: /?(.*)
       pathType: Prefix
       backend:
         service:
           name: ReactService
           port:
             number: 3000

     - path: /api/?(.*)
       pathType: Prefix
       backend:
         service:
           name: NodeExpressService
           port:
             number: 5000
